Enhance documentation and improve error handling in Graph and Nanoleaf classes